# python-cli-template

./: .gitattributes  README.md  copier.yaml  pyproject.toml
template/{{ project_slug }}/: LICENSE.jinja  README.md.jinja  pyproject.toml.jinja
template/{{ project_slug }}/src/{{ package_name }}/: main.py
