[project]
name = "copier-project-templates"
version = "0.1.0"
description = "Repo for my copier templates"
dependencies = []
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "commitizen>=4.11.6",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.1"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]