[project]
name = "python-cli-template"

version = "1.2.0"
description = "Repo for my copier templates"
dependencies = [
    "copier>=9.11.1",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "commitizen>=4.11.6",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.2.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]
